; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_io.c_wiiuse_handshake_expansion_start.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_io.c_wiiuse_handshake_expansion_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiimote_t = type { i64 }

@WIIMOTE_STATE_EXP = common dso_local global i32 0, align 4
@WIIMOTE_STATE_EXP_FAILED = common dso_local global i32 0, align 4
@WIIMOTE_STATE_EXP_HANDSHAKE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wiiuse_handshake_expansion_start(%struct.wiimote_t* %0) #0 {
  %2 = alloca %struct.wiimote_t*, align 8
  store %struct.wiimote_t* %0, %struct.wiimote_t** %2, align 8
  %3 = load %struct.wiimote_t*, %struct.wiimote_t** %2, align 8
  %4 = load i32, i32* @WIIMOTE_STATE_EXP, align 4
  %5 = call i64 @WIIMOTE_IS_SET(%struct.wiimote_t* %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %17, label %7

7:                                                ; preds = %1
  %8 = load %struct.wiimote_t*, %struct.wiimote_t** %2, align 8
  %9 = load i32, i32* @WIIMOTE_STATE_EXP_FAILED, align 4
  %10 = call i64 @WIIMOTE_IS_SET(%struct.wiimote_t* %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %7
  %13 = load %struct.wiimote_t*, %struct.wiimote_t** %2, align 8
  %14 = load i32, i32* @WIIMOTE_STATE_EXP_HANDSHAKE, align 4
  %15 = call i64 @WIIMOTE_IS_SET(%struct.wiimote_t* %13, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12, %7, %1
  br label %26

18:                                               ; preds = %12
  %19 = load %struct.wiimote_t*, %struct.wiimote_t** %2, align 8
  %20 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %19, i32 0, i32 0
  store i64 0, i64* %20, align 8
  %21 = load %struct.wiimote_t*, %struct.wiimote_t** %2, align 8
  %22 = load i32, i32* @WIIMOTE_STATE_EXP_HANDSHAKE, align 4
  %23 = call i32 @WIIMOTE_ENABLE_STATE(%struct.wiimote_t* %21, i32 %22)
  %24 = load %struct.wiimote_t*, %struct.wiimote_t** %2, align 8
  %25 = call i32 @wiiuse_handshake_expansion(%struct.wiimote_t* %24, i32* null, i32 0)
  br label %26

26:                                               ; preds = %18, %17
  ret void
}

declare dso_local i64 @WIIMOTE_IS_SET(%struct.wiimote_t*, i32) #1

declare dso_local i32 @WIIMOTE_ENABLE_STATE(%struct.wiimote_t*, i32) #1

declare dso_local i32 @wiiuse_handshake_expansion(%struct.wiimote_t*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
